update dependencies, add README